Add README file to explain project
Related to #1

Add a README file and update package.json description field.

* **README.md**
  - Add a title "HEART"
  - Add a description of the project, explaining its purpose
  - Add instructions on how to use the project
  - Add a section for installation and setup instructions
  - Add a section for contributing guidelines

* **package.json**
  - Update the "description" field with a brief explanation of the project

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/jeancdevx/heart/issues/1?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heart",
   "version": "1.0.0",
-  "description": "",
+  "description": "HEART is a web-based project that displays an animated heart on the screen. The heart animation is created using HTML5 canvas and JavaScript. The project is designed to be visually appealing and can be used as a decorative element on websites or as a fun project to learn about canvas animations.",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
